Backport use immutable map factory methods to java (#39)
* Backport-Use-immutable-Map-factory-methods-to-Java

Co-Authored-By: Jtfk <10415768+jtfk@users.noreply.github.com>

* Update checkstyle.xml

Co-Authored-By: Jtfk <10415768+jtfk@users.noreply.github.com>

* remove branch Backport-Use-immutable-Map-factory-methods.-to-Java from ci

Co-Authored-By: Jtfk <10415768+jtfk@users.noreply.github.com>

---------

Co-authored-by: Jtfk <10415768+jtfk@users.noreply.github.com>